<resources>
    <string name="app_name">Swiper No Swiping</string>
    <string name="login_label">Swiper No Swiping</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Sign In</string>
    <string name="login_register">Sign Up</string>
    <string name="register_label">Register</string>
    <string name="register_done">Done</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_register">Register</string>
    <string name="phone_label">Add Phone</string>
    <string name="phone_uploading">Uploading</string>
    <string name="phone_wait">Please wait</string>
    <string name="phone_name">Phone name</string>
    <string name="phone_add_phone">Add Phone</string>
    <string name="home_label">Swiper No Swiping</string>
    <string name="home_downloading">Downloading</string>
    <string name="home_wait">Please wait</string>
    <string name="home_loading_users">Loading users please wait</string>
    <string name="home_users">Users:</string>
    <string name="home_phones">Phones:</string>
    <string name="home_start">Enable Protection</string>
    <string name="home_stop">Disable Protection</string>
    <string name="home_settings">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="settings_done">Done</string>
    <string name="settings_scan_frequency">Scan Frequency</string>
    <string name="settings_safe_mode_duration">Safe Mode Duration</string>
    <string name="settings_lock_down">Lock Down</string>
    <string name="settings_alarm_title">Play siren on lock down</string>
    <string name="settings_alarm_description">Phone will play a siren when an unauthorized user is detected.</string>
    <string name="settings_max_volume_title">Play siren at max volume</string>
    <string name="settings_max_volume_description">Plays the siren at maximum volume instead of current audio volume.</string>
    <string name="add_label">Add User</string>
    <string name="add_done">Done</string>
    <string name="add_name">User name</string>
    <string name="add_add_image">Add Image</string>
    <string name="add_replace_image">Replace Image</string>
</resources>
